--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
+
+    implementation 'com.balysv:material-ripple:1.0.2'
+
 }
